minor cosmetic changes

--- a/index.css
+++ b/index.css
@@ -3,11 +3,13 @@
  }
 
  .box {
-
      margin-left:auto;
      margin-right:auto;
      margin-top:10px;
      height:450px;
      width:600px;
      border: 2px black solid;
+ }
+ .hide-me {
+     display:none;
  }
