--- a/index.css
+++ b/index.css
@@ -1,15 +1,51 @@
 * {
     box-sizing:"border-box";
  }
-
+body{
+    font-family: 'Righteous', cursive;
+}
  .box {
      margin-left:auto;
      margin-right:auto;
      margin-top:10px;
-     height:450px;
      width:600px;
-     border: 2px black solid;
  }
  .hide-me {
      display:none;
+ }
+header{
+    position:fixed;
+    border-bottom: 2px solid black;
+    width:100%;
+    height:20%;
+}
+main{
+    position:relative;
+    top:150px;
+    height:75%;
+}
+ #logo{
+     width:50px;
+     height:30px;
+ }
+ h1 {
+    text-align: center;
+    font-size: 30px;
+ }
+
+ ul{
+     list-style: none;
+     display:flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+ }
+ #logo{
+    height:20px;
+    width:40px;
+ }
+ li.header-list{
+     display:inline-block;
+ }
+ h2{
+    text-align: center;
  }
