--- a/index.css
+++ b/index.css
@@ -14,15 +14,21 @@ body{
      display:none;
  }
 header{
+    background-color:black;
+    color:white;
     position:fixed;
     border-bottom: 2px solid black;
     width:100%;
-    height:20%;
+    height:23%;
 }
 main{
+    display:block;
+    margin-right:auto;
+    margin-left:auto;
     position:relative;
     top:150px;
     height:75%;
+    margin-bottom:10px;
 }
  #logo{
      width:50px;
@@ -48,4 +54,32 @@ main{
  }
  h2{
     text-align: center;
+ }
+ .js-start-form{
+     display:block;
+     margin-right:auto;
+     margin-left:auto;
+ }
+ #tip-off{
+     display:block;
+     margin-right:auto;
+     margin-left:auto;
+     width:50%;
+
+ }
+
+ legend{
+     text-align: center;
+ }
+ button{
+    margin-top:5px;
+    margin-bottom:5px;
+    background-color:#4CAF50;
+    font-size:13px;
+    color:white;
+    border: 1px black solid;
+ }
+ button:hover{
+     background-color: white;
+     color:black;
  }
