added minor responsive design

--- a/index.css
+++ b/index.css
@@ -66,6 +66,7 @@ main{
      margin-right:auto;
      margin-left:auto;
      width:50%;
+     flex:1
  }
 
  legend{
@@ -106,4 +107,19 @@ main{
  }
 .js-ending-quiz{
     text-align: center;
+}
+@media screen and (min-width:550px){
+    #tip-off{
+        width:80%;
+    }
+}
+
+@media screen and (min-width:850px){
+    #tip-off{
+        width:100%;
+    }
+    .result-image{
+        width:80%;
+        height:80%;
+    }
 }
