--- a/index.css
+++ b/index.css
@@ -86,6 +86,12 @@ main{
      background-color: white;
      color:black;
  }
+ .js-question-heading{
+     text-align: left;
+ }
+ .js-question-legend{
+     text-align: left;
+ }
  .js-answer-page-box{
      margin-right:auto;
      margin-left:auto;
@@ -121,5 +127,11 @@ main{
     .result-image{
         width:80%;
         height:80%;
+    }
+     .js-question-heading{
+     text-align: center;
+    }
+    .js-question-legend{
+        text-align: center;
     }
 }
