--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Righteous', cursive;
 }
  .box {
+     
      margin-left:auto;
      margin-right:auto;
      margin-top:10px;
@@ -14,19 +15,20 @@ body{
      display:none;
  }
 header{
+    top:0;
     background-color:black;
     color:white;
     position:fixed;
     border-bottom: 2px solid black;
     width:100%;
-    height:23%;
+    height:130px;
 }
 main{
     display:block;
     margin-right:auto;
     margin-left:auto;
     position:relative;
-    top:150px;
+    top:200px;
     height:75%;
     margin-bottom:10px;
 }
@@ -37,6 +39,7 @@ main{
  h1 {
     text-align: center;
     font-size: 30px;
+    margin:30px;
  }
 
  ul{
@@ -54,6 +57,7 @@ main{
  }
  h2{
     margin-top:20px;
+    margin-bottom:20px;
     text-align: center;
  }
  .js-start-form{
@@ -66,12 +70,14 @@ main{
      margin-right:auto;
      margin-left:auto;
      width:50%;
-     flex:1
+     flex:1;
+     margin-top:30px;
  }
 
  legend{
      text-align: center;
      overflow-wrap: break-word;
+     margin:20px;
  }
  button{
     margin-top:5px;
@@ -81,7 +87,11 @@ main{
     color:white;
     border: 1px black solid;
     border-radius: 10px;
+    margin:20px;
+    padding:10px;
+    font-size:15px;
  }
+
  button:hover{
      background-color: white;
      color:black;
