--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ main{
     text-align: center;
     margin:20px;
 }
- legend{
+ p{
      text-align: center;
      overflow-wrap: break-word;
      margin:20px;
