--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ body{
  .hide-me {
      display:none;
  }
+ .js-question-form{
+     width:300px;
+     height:400px;
+ }
 header{
     left:0;
     margin:0;
