--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Righteous', cursive;
 }
  .box {
+     display:block;
      margin-left:auto;
      margin-right:auto;
      margin-top:10px;
