removing media queries

--- a/index.css
+++ b/index.css
@@ -131,6 +131,7 @@ main{
 .js-ending-quiz{
     text-align: center;
 }
+/*
 @media screen and (min-width:550px){
     #tip-off{
         width:80%;
@@ -152,3 +153,4 @@ main{
         text-align: center;
     }
 }
+*/
