--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ main{
      display:block;
      margin-right:auto;
      margin-left:auto;
-     width:50%;
+     width:300px;
      flex:1;
      margin-top:30px;
  }
