pushing size change for bigger screen

--- a/index.css
+++ b/index.css
@@ -131,13 +131,16 @@ main{
 .js-ending-quiz{
     text-align: center;
 }
-/*
+
 @media screen and (min-width:550px){
     #tip-off{
-        width:80%;
+        width:500px;
+    }
+    .box{
+        width:520px;
     }
 }
-
+/*
 @media screen and (min-width:850px){
     #tip-off{
         width:100%;
